# CMake_demo

./: CMakeLists.txt  Jenkinsfile
.github/workflows/: cicd-pipeline.yml  dotnet.yml
dotnet-app/: Program.cs
src/: main.cpp
